--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -23,7 +23,7 @@
   "logToConsole" : false,
   "logFileName" : "~/dvr/kLiveController.log",
   "logTimeZoneOffset" : 300,
-  "monitorPort": 4391,
+  "monitorPort": 4390,
   "regressionAdapter": {
       "enable":false
   },
@@ -66,8 +66,9 @@
     "enablePlaylistHistory": false
   },
   "recording" : {
-       "recordingFolderPath" : "/web/content/kLive/recording/recordings",
-       "completedRecordingFolderPath" : "/web/content/kLive/recording/incoming",
+       "enable" : false,
+       "recordingFolderPath" : "~/kLive_content/recording/recordings",
+       "completedRecordingFolderPath" : "~/kLive_content/recording/incoming",
        "recordingTimeIntervalInSec" : "60",
        "recordingMaxDurationInHours" : "24",
        "recordingSessionDurationInSec" : "180"
