add set contect local, and more stuff

--- a/recordingUploader/Config/config.ini
+++ b/recordingUploader/Config/config.ini
@@ -1,15 +1,13 @@
 [default_config]
 max_task_count=10
 recording_base_dir = /web/content/kLive/recording
-ffmpeg_path = /opt/kaltura/ffmpeg
 log_level : DEBUG
 log_to_console : True
-log_file_name : /var/log/recording_uploader.log
-output_file_name = file.mp4
+log_file_name : /var/log/recording_uploade.log
 polling_interval = 3
 concat_processors_count = 2
 uploading_processors_count = 1
-mode = remote
+mode = local
 # Mode is choose between ecdn and saas
 upload_token_buffer_size = 6
 #in MB
