wait to upload n-1 chunks before upload last, and update upload token list

--- a/recordingUploader/Config/config.ini
+++ b/recordingUploader/Config/config.ini
@@ -3,11 +3,11 @@ max_task_count=10
 recording_base_dir = /web/content/kLive/recording
 log_level : DEBUG
 log_to_console : True
-log_file_name : /var/log/recording_uploade.log
+log_file_name : /var/log/recording_uploader.log
 polling_interval = 3
 concat_processors_count = 2
 uploading_processors_count = 1
-mode = local
+mode = remote
 # Mode is choose between ecdn and saas
 upload_token_buffer_size = 6
 #in MB
