--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -51,8 +51,7 @@
   },
   "preserveOriginalHLS": {
       "enable": false,
-      "createFolderPerSession": true,
-      "runDurationInMinutes": 5
+      "createFolderPerSession": true
   },
   "diagnostics": {
       "minChunkDurationInSec": 1,
