keep cashed live entries in wowzaAdapter
1) added mechanism to keep cashed live entry and return them in case of
short disconnections from wowza.
2) added configuration for the duration of disconnection to reset live
entires: disconnectDurationMillisecToResetLiveEntries.
3) reverted delete of entry in Controller.stop(). Change was incorrect.
And would have cause ignore of state machine suspend time.

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -47,7 +47,8 @@
       "applicationName" : "kLive",
       "port" : 1935,
       "user" : "",
-      "password" : ""
+      "password" : "",
+      "disconnectDurationMillisecToResetLiveEntries" : 60000
   },
   "backendClient" : {
     "adminSecret" :"admin secret",
