support endless stream preservation (for debug and testing)
1) runDurationInMinutes can be undefined, in that case preservation
will continue forever and liveController process won’t stop
automatically.
2) config param runDurationInMinutes (under preserveOriginalHLS) was
removed from config.json.template. In order to limit the time a stream
is preserved (for data warehouse preservation), need to add it
configMapping.json

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -51,8 +51,8 @@
   },
   "preserveOriginalHLS": {
       "enable": false,
-      "createFolderPerSession": true,
-      "runDurationInMinutes": 5
+      "createFolderPerSession": true
+
   },
   "diagnostics": {
       "minChunkDurationInSec": 1,
