--- a/packager/config/nginx.conf.template
+++ b/packager/config/nginx.conf.template
@@ -105,6 +105,12 @@ http {
                 vod mss;
             }
         }
+        location ~ ^/recording/hls/e/(?<entryId>[^/]+)/ {
+            vod_force_continuous_timestamps on;
+            alias @CONTENT_DIR@/$entryId/playlist.json;
+            vod hls;
+        }
+
 
         location / {
             expires 1d;
@@ -152,4 +158,6 @@ http {
         }
 
     }
+
+
 }
