--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -26,6 +26,7 @@
   "persistenceCheckIntervalSec": 20,
   "persistenceFileName": "~/dvr/%s_kLivePersistence.json",
   "expirationTimeWindowSec": "30",
+  "maxClipsPerPlaylistJson": "126",
   "regressionAdapter": {
       "verbose": false,
       "enable": false,
