--- a/packager/config/nginx.conf.template
+++ b/packager/config/nginx.conf.template
@@ -108,6 +108,10 @@ http {
         location ~ ^/recording/hls/e/(?<entryId>[^/]+)/ {
             vod_force_continuous_timestamps on;
             alias @CONTENT_DIR@/$entryId/playlist.json;
+             add_header 'Access-Control-Allow-Headers' 'Origin,Range';
+             add_header 'Access-Control-Expose-Headers' 'Server,Content-Length,Content-Range,Date';
+             add_header 'Access-Control-Allow-Methods' 'GET, HEAD, OPTIONS';
+             add_header 'Access-Control-Allow-Origin' '*';
             vod hls;
         }
 
