Create hierarchy for entries in destination folder - update Nginx configuration

--- a/packager/config/nginx.conf.live.bootstrap.template
+++ b/packager/config/nginx.conf.live.bootstrap.template
@@ -3,12 +3,9 @@ add_header 'Access-Control-Expose-Headers' 'Server,Content-Length,Content-Range,
 add_header 'Access-Control-Allow-Methods' 'GET, HEAD, OPTIONS';
 add_header 'Access-Control-Allow-Origin' '*';
 
-if ($playlist = '') {
-    set $playlist "playlist.json";
-}
 
 
-alias @CONTENT_DIR@/$entryId/$playlist;
+alias @CONTENT_DIR@/$hashIndex/$entryId/playlist.json;
 
 
 add_header X-DEBUG-HEADER "entryId=$entryId; token=$token; key=$scheme://$http_host$tokenKey/; host=$host; secure_link=$secure_link";
