--- a/recordingUploader/Config/config.ini
+++ b/recordingUploader/Config/config.ini
@@ -22,6 +22,6 @@ admin_secret = admin secret
 partner_id = 12345
 api_service_url = http://serviceURL
 
-cron_job_polling_interval_hours= 2
+cron_job_polling_interval_hours = 2
 cron_job_log_file_name : /var/log/recording_cron.log
 # tasks = { "concat": "/concat_task", "processors_count": 5}
