add update recording duration

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -98,6 +98,7 @@
        "completedRecordingFolderPath" : "~/kLive_content/recording/incoming",
        "recordingTimeIntervalInSec" : "60",
        "recordingMaxDurationInHours" : "24",
-       "recordingSessionDurationInSec" : "180"
+       "recordingSessionDurationInSec" : "180",
+       "recordingUpdateEntryTimeIntervalInMin" : "15"
      }
 }
