--- a/recordingUploader/Config/config.ini
+++ b/recordingUploader/Config/config.ini
@@ -7,6 +7,7 @@ log_file_name : /var/log/recording_uploader.log
 polling_interval_sec = 60
 concat_processors_count = 2
 uploading_processors_count = 1
+nginx_url =  http://localhost:8080/recording/hls/e/
 mode = local
 # Mode is choose between ecdn and saas
 upload_token_buffer_size_mb = 6
