change expirationTimeWindowSec and maxClipsPerFlavor values from string to numbers

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -25,8 +25,8 @@
   "monitorPort": 4390,
   "persistenceCheckIntervalSec": 20,
   "persistenceFileName": "~/dvr/%s_kLivePersistence.json",
-  "expirationTimeWindowSec": "30",
-  "maxClipsPerFlavor": "125",
+  "expirationTimeWindowSec": 30,
+  "maxClipsPerFlavor": 125,
   "regressionAdapter": {
       "verbose": false,
       "enable": false,
