move ksPrivileges defenition to config.template file

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -49,7 +49,8 @@
     "adminSecret" :"admin secret",
     "partnerId" : 12345,
     "serviceUrl" : "http://serviceURL",
-    "ksSessionRefreshIntervalMinutes" : 720
+    "ksSessionRefreshIntervalMinutes" : 720,
+    "ksPrivileges": "all:*,disableentitlement"
   },
   "heapDumpParams" : {
     "timeInterval" : 900000,
