--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -52,6 +52,7 @@
   },
   "preserveOriginalHLS": {
       "enable": false,
+      "dirHierarchy": true,
       "createFolderPerSession": true
 
   },
