--- a/recordingUploader/Config/config.ini
+++ b/recordingUploader/Config/config.ini
@@ -1,9 +1,9 @@
 [default_config]
 max_task_count= 10
 recording_base_dir = /web/content/kLive/recording
-log_level : DEBUG
-log_to_console : True
-log_file_name : /var/log/recording_uploader.log
+log_level = DEBUG
+log_to_console = True
+log_file_name = /var/log/recording_uploader.log
 polling_interval_sec = 60
 concat_processors_count = 2
 uploading_processors_count = 1
@@ -24,5 +24,4 @@ partner_id = 12345
 api_service_url = http://serviceURL
 
 cron_job_polling_interval_hours = 2
-cron_job_log_file_name : /var/log/recording_cron.log
-# tasks = { "concat": "/concat_task", "processors_count": 5}
+cron_job_log_file_name = /var/log/recording_cron.log
