--- a/liveRecorder/Config/config.ini
+++ b/liveRecorder/Config/config.ini
@@ -3,7 +3,7 @@ max_task_count= 10
 recording_base_dir = /web/content/kLive/recording
 log_level = DEBUG
 log_to_console = True
-log_file_name = /var/log/recording_uploader.log
+log_file_name = /var/log/liveRecorder.log
 polling_interval_sec = 60
 concat_processors_count = 2
 uploading_processors_count = 1
