--- a/liveRecorder/Config/config.ini
+++ b/liveRecorder/Config/config.ini
@@ -1,8 +1,8 @@
 [default_config]
 max_task_count= 10
-recording_base_dir = /web/content/kLive/recording
+recording_base_dir = /web/content/kLive/liveRecorder
 log_level = DEBUG
-log_to_console = True
+log_to_console = False
 log_file_name = /var/log/liveRecorder.log
 polling_interval_sec = 60
 concat_processors_count = 2
