--- a/liveRecorder/Config/config.ini
+++ b/liveRecorder/Config/config.ini
@@ -25,3 +25,4 @@ api_service_url = http://serviceURL
 
 cron_job_polling_interval_hours = 2
 cron_job_log_file_name = /var/log/recording_cron.log
+cron_jon_stamp = cronjob
