--- a/liveRecorder/Config/config.ini
+++ b/liveRecorder/Config/config.ini
@@ -11,7 +11,7 @@ failed_tasks_max_retries = 5
 failed_tasks_handling_interval = 1
 # in minutes
 mode = local
-# Mode is choose between ecdn and saas
+# Mode is choose between remote (ecdn), local (saas) or none (not doing anything with recording)
 
 nginx_port = 80
 nginx_host = localhost
