--- a/liveRecorder/Config/config.ini
+++ b/liveRecorder/Config/config.ini
@@ -21,7 +21,7 @@ cron_job_log_file_name = /var/log/liveRecorder/recording_cron.log
 cron_jon_stamp = cronjob
 
 log_level = DEBUG
-log_to_console = True
+log_to_console = False
 log_file_name = /var/log/liveRecorder/liveRecorder.log
 log_rotate_interval_days = 1
 log_rotate_windows_files = 30
