--- a/packager/config/nginx.conf.template
+++ b/packager/config/nginx.conf.template
@@ -75,6 +75,12 @@ http {
 
             secure_link $token;
             secure_link_md5 "test $scheme://$http_host$tokenKey/";
+
+            location ~ ^/live/legacy/p/\d+/e/[^/]+/t/[^/]+/(?<path>.*) {
+                include nginx.conf.live.bootstrap;
+                proxy_pass http://127.0.0.1:1935/kLive/ngrp:${entryId}_1_all/$path$is_args$args;
+            }
+
             location ~ /live/ {
 			    include nginx.conf.location.live.protocols;
             }
@@ -86,6 +92,10 @@ http {
 
         }
 
+        location ~ ^/(live/hls/)?kLive/smil:(?<entryId>[01]_[^_]+)_[^\.]+.smil/(?<path>.*) {
+            include nginx.conf.live.bootstrap;
+            proxy_pass http://127.0.0.1:1935/kLive/ngrp:${entryId}_1_all/$path$is_args$args;
+        }
 
         location / {
             expires 1d;
