PLAT-6379 add recover script from liveRecorder and liveContoller

--- a/liveRecorder/Config/config.ini
+++ b/liveRecorder/Config/config.ini
@@ -26,6 +26,8 @@ log_file_name = /var/log/liveRecorder/liveRecorder.log
 log_rotate_interval_days = 1
 log_rotate_windows_files = 30
 
+recover_log_file_name = /var/log/liveRecorder/recover.log
+
 admin_secret = admin secret
 partner_id = 12345
 api_service_url = http://serviceURL
