--- a/liveRecorder/Config/config.ini
+++ b/liveRecorder/Config/config.ini
@@ -21,10 +21,12 @@ cron_job_log_file_name = /var/log/liveRecorder/recording_cron.log
 cron_jon_stamp = cronjob
 
 log_level = DEBUG
-log_to_console = True
+log_to_console = False
 log_file_name = /var/log/liveRecorder/liveRecorder.log
 log_rotate_interval_days = 1
 log_rotate_windows_files = 30
+
+recover_log_file_name = /var/log/liveRecorder/recover.log
 
 admin_secret = admin secret
 partner_id = 12345
