PLAT-6517: Wowza diagnostics - Alerts Analysis (#376)
* PLAT-6517: Wowza diagnostics - Alerts Analysis

* PLAT-6517: Wowza diagnostics - Alerts Analysis - Fix Comments

* PLAT-6517: Wowza diagnostics - Alerts Analysis - Refactor

* PLAT-6517: Wowza diagnostics - Alerts Analysis - Refactor 2

* PLAT-6517: Wowza diagnostics - Alerts Analysis - Refactor 3

* PLAT-6517: Wowza diagnostics - Alerts Analysis - fix bug

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -60,7 +60,8 @@
       "minChunkDurationInSec": 1,
       "maxChunkDurationInSec": 60,
       "errorsWindowSizeInMin" : 5,
-      "ptsMaxMisalignmentAllowedInMSec" : 5000
+      "ptsMaxMisalignmentAllowedInMSec" : 5000,
+      "bitrateDiffPercentageAllowed" : 10
   },
   "simulateStreams": {
       "enable":false,
