PLAT-6767. Check pts information received from wowza and report slow/fast streams

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -61,6 +61,8 @@
       "maxChunkDurationInSec": 60,
       "errorsWindowSizeInMin" : 5,
       "ptsMaxMisalignmentAllowedInMSec" : 5000,
+      "ptsRollingWindowSizeInMSec" : 300000,
+      "ptsDiffPercentageAllowed" : 5,
       "bitrateDiffPercentageAllowed" : 10
   },
   "simulateStreams": {
