--- a/liveRecorder/Config/config.ini
+++ b/liveRecorder/Config/config.ini
@@ -9,7 +9,7 @@ num_of_upload_thread = 7
 session_duration = 86400
 failed_tasks_max_retries = 5
 failed_tasks_handling_interval = 1
-ksPrivileges = all:*,disableentitlement
+ks_privileges = all:*,disableentitlement
 
 
 # in minutes
