PLAT-6767. Check pts information received from wowza and report slow/… (#400)
* PLAT-6767. Check pts information received from wowza and report slow/fast streams

* PLAT-6767. Check pts information received from wowza and report slow/fast streams - modifications

* PLAT-6767. Check pts information received from wowza and report slow/fast streams - modifications 2

* PLAT-6767. Check pts information received from wowza and report slow/fast streams - modifications 3

* PLAT-6767. Check pts information received from wowza and report slow/fast streams - modifications 4

* PLAT-6767. Check pts information received from wowza and report slow/fast streams - modifications 5

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -61,6 +61,8 @@
       "maxChunkDurationInSec": 60,
       "errorsWindowSizeInMin" : 5,
       "ptsMaxMisalignmentAllowedInMSec" : 5000,
+      "ptsRollingWindowSizeInSec" : 300,
+      "ptsDiffPercentageAllowed" : 1,
       "bitrateDiffPercentageAllowed" : 10
   },
   "simulateStreams": {
