change framework to commander

--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "tmp": "0.0.27"
   },
   "dependencies": {
-    "chunked-stream": "0.0.2",
-    "command-line-args": "^4.0.1",
+    "commander": "^2.9.0",
     "curry": "1.2.0",
     "forever": "0.15.2",
     "glob": "7.0.5",
