--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -97,7 +97,8 @@
     "humanReadable" : false,
     "preserveMP4Chunks": false,
     "segmentDuration" : 10000,
-    "enablePlaylistHistory": false
+    "enablePlaylistHistory": false,
+    "hlsMaxDurationInHours" : 24
   },
   "recording" : {
        "enable" : false,
