plat-7138_duration_too_large (#430)
* limit max play window DVR/VOD to 24 hours

requires nginx-vod-module upgrade to release supporting 25 hours window
size.

* after code review

Both DVR and VOD get’s extra 5 minutes to cover edge use cases.
The limit of 24 hrs for DVR/VOD is hard coded, in PlaylistGenerator.js.

* added new configuration defining max allowed play window

some names refactory

* passing playlistGenerator to recordingManager

updated code to support single place to initialize the max play window
size.

* update based on code review comments

* revert change

* nginx darwin new bin

+ name refactory

* name refectory & minor code change

* jenkins complied binaries

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -97,7 +97,8 @@
     "humanReadable" : false,
     "preserveMP4Chunks": false,
     "segmentDuration" : 10000,
-    "enablePlaylistHistory": false
+    "enablePlaylistHistory": false,
+    "maxDVRWindowInHours" : 24
   },
   "recording" : {
        "enable" : false,
