support all flavors concat and convert to mp4
Code not complete. Waiting BE API update to support upload of mp4 per
flavor.
Need finish tests

--- a/liveRecorder/Config/config.ini
+++ b/liveRecorder/Config/config.ini
@@ -33,3 +33,4 @@ recover_log_file_name = /var/log/liveRecorder/recover.log
 admin_secret = admin secret
 partner_id = 12345
 api_service_url = http://serviceURL
+ts_2_mp4_converter_path = ./ts_2_mp4_converter
