revert local config + removed ts_to_mp4_convertor_path
no need for configuration of format convertor.

--- a/liveRecorder/Config/config.ini
+++ b/liveRecorder/Config/config.ini
@@ -13,24 +13,24 @@ ks_privileges = all:*,disableentitlement
 
 
 # in minutes
-mode = remote
+mode = local
 # Mode is choose between remote (ecdn), local (saas) or none (not doing anything with recording)
 
 nginx_port = 80
 nginx_host = localhost
 
 cron_job_polling_interval_hours = 2
-cron_job_log_file_name = /Users/lilach.maliniak/Documents/tmp/var/log/liveRecorder/recording_cron.log
+cron_job_log_file_name = /var/log/liveRecorder/recording_cron.log
 cron_jon_stamp = cronjob
 
 log_level = DEBUG
-log_to_console = True
-log_file_name = /Users/lilach.maliniak/Documents/tmp/var/log/liveRecorder/liveRecorder.log
+log_to_console = False
+log_file_name = /var/log/liveRecorder/liveRecorder.log
 log_rotate_windows_files = 30
 
-recover_log_file_name =/Users/lilach.maliniak/Documents/tmp/var/log/liveRecorder/recover.log
+recover_log_file_name = /var/log/liveRecorder/recover.log
 
 admin_secret = admin secret
-partner_id = 102
-api_service_url = http://dev-backend28.dev.kaltura.com
-ts_to_mp4_convertor_path = ./ts_to_mp4_convertor
+partner_id = 12345
+api_service_url = http://serviceURL
+
