updated main.c and Makefile to fix linux build issues

--- a/liveRecorder/ts_to_mp4_convertor/Makefile
+++ b/liveRecorder/ts_to_mp4_convertor/Makefile
@@ -1,4 +1,4 @@
-CC = gcc
+CC = gcc -v
 SRC = $(wildcard *.c)
 DEPS = $(wildcard *.h)
 ODIR=obj
@@ -8,9 +8,9 @@ _EXE = ts_to_mp4_convertor
 EXE = $(patsubst %,$(ODIR)/%,$(_EXE))
 FFMPEG_LIB_DIR = ../../node_addons/FormatConverter/build/FFmpeg
 IDIRS = -I. -I$(FFMPEG_LIB_DIR)
-LDIR = -L$(FFMPEG_LIB_DIR)/libavutil -L$(FFMPEG_LIB_DIR)/libavformat -L$(FFMPEG_LIB_DIR)/libavcodec -L/usr/local/lib
-FFMPEG_LIBS = -lavutil -lavformat -lavcodec
-LIBS = -liconv -lz -lm
+LDIR = -L$(FFMPEG_LIB_DIR)/libswscale -L$(FFMPEG_LIB_DIR)/libavdevice -L$(FFMPEG_LIB_DIR)/libavutil -L$(FFMPEG_LIB_DIR)/libavformat -L$(FFMPEG_LIB_DIR)/libavcodec
+FFMPEG_LIBS = -lswscale.a -lavdevice -lavformat -lavcodec -lavutil
+LIBS = -lpthread  -lm -lz  -lrt
 CFLAGS = -Wall -g $(IDIRS)
 LDFLAGS =  $(LDIR) $(FFMPEG_LIBS) $(LIBS)
 
