support link with different libs in linux and darwin

--- a/liveRecorder/ts_to_mp4_convertor/Makefile
+++ b/liveRecorder/ts_to_mp4_convertor/Makefile
@@ -8,11 +8,18 @@ _EXE = ts_to_mp4_convertor
 EXE = $(patsubst %,$(ODIR)/%,$(_EXE))
 FFMPEG_LIB_DIR = ../../node_addons/FormatConverter/build/FFmpeg
 IDIRS = -I. -I$(FFMPEG_LIB_DIR)
-LDIR = -L$(FFMPEG_LIB_DIR)/libswscale -L$(FFMPEG_LIB_DIR)/libavdevice -L$(FFMPEG_LIB_DIR)/libavutil -L$(FFMPEG_LIB_DIR)/libavformat -L$(FFMPEG_LIB_DIR)/libavcodec
-FFMPEG_LIBS = -lswscale.a -lavdevice -lavformat -lavcodec -lavutil
-LIBS = -lpthread  -lm -lz  -lrt
+LDIR = -L$(FFMPEG_LIB_DIR)/libswscale -L$(FFMPEG_LIB_DIR)/libavdevice -L$(FFMPEG_LIB_DIR)/libavutil -L$(FFMPEG_LIB_DIR)/libavformat -L$(FFMPEG_LIB_DIR)/libavcodec -L/usr/local/lib
+FFMPEG_LIBS = -lswscale -lavdevice -lavformat -lavcodec -lavutil
+LIBS = -lpthread  -lm -lz
 CFLAGS = -Wall -g $(IDIRS)
 LDFLAGS =  $(LDIR) $(FFMPEG_LIBS) $(LIBS)
+
+ifeq ($(OS),linux)
+    LIBS += -ltr
+else
+	LIBS += -liconv
+endif
+
 
 $(ODIR)/%.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
