--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "glob": "7.0.5",
     "log4js": "0.6.37",
     "mkdirp": "0.5.1",
-    "nconf": "0.8.4",
+    "nconf": "^0.8.4",
     "q": "1.4.1",
     "q-io": "1.13.2",
     "request": "^2.61.0",
