PLAT--7229 Recording live stream with multiple audio tracks (#434)
* Initial commit for ts2mp4

* Support multiple streams

* support concat and conversion to mp4 of all flavors in recorded entry

* support all flavors concat and convert to mp4

Code not complete. Waiting BE API update to support upload of mp4 per
flavor.
Need finish tests

* revert .gitignore

* changes after code review

extended BE api parameters with flavor id.
remained to complete testing & add makefile

* Refactor streaming test client

* update to support upload by flavor id

tests ongoing pending BE API update

* add ability to "pause/resume" streams

* some fixes

* fix start with key frame + show rate of streaming

* Fix crash at the end

* fix typo mistake

* Update config.ini

* added script and Makefile to support build of ts_to_mp4_contertor

Both Linux & Darwin OS are supported.
result executable is copied to bin/darwin or bin/linux according to OS.

* revert local config + removed ts_to_mp4_convertor_path

no need for configuration of format convertor.

* update  ts_to_mp4_convertor build

now liveRecorder run ts_to_mp4_convertor from bin/darwin or bin/linux

* name refactor

* remove duplicate i declaration

* remove index redefinition

* added mkdir obj

* removed libpng from lib list

* Refactor multiple audio configuration for live to support recording entries

* updated main.c and Makefile to fix linux build issues

* Refactor multiple audio configuration for live to support recording entries

* support link with different libs in linux and darwin

* Refactor multiple audio configuration for live to support recording entries - edit comments

* minor updates to build script

* updated ts_to_mp4_convertor bin for darwin (iOS)

*  printing added

* fix lib name typo

* add 1st ts_to_mp4_convertor to bin/linux

not to be used

* added obj dir to .gitignore

* jenkins complied binaries

* delete unu

--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,14 @@ reports
 # ignor local congif
 common/config/configMapping.json
 
+# ignore local liveRecorder config
 liveRecorder/Config/configMapping.ini
+
+#ignore ts_to_mp4_convertor obj dir
+liveRecorder/ts_to_mp4_convertor/obj
+
+# ignore ts_to_mp4_convertor’s xcode project dir
+liveRecorder/ts_to_mp4_convertor/ts_to_mp4_convertor.xcodeproj/
+
+# ignore streaming_client’s Xcode project dir
+tests/streaming_client/streaming_client.xcodeproj/
