updates based on Jess's review

--- a/liveRecorder/ts_to_mp4_convertor/Makefile
+++ b/liveRecorder/ts_to_mp4_convertor/Makefile
@@ -6,20 +6,20 @@ _OBJ = $(SRC:.c=.o)
 OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
 _EXE = ts_to_mp4_convertor
 EXE = $(patsubst %,$(ODIR)/%,$(_EXE))
-FFMPEG_LIB_DIR:=$(shell echo $(FFMPEG_BUILD_PATH))
+FFMPEG_LIB_DIR := $(shell echo $(FFMPEG_BUILD_PATH))
 IDIRS = -I. -I$(FFMPEG_LIB_DIR)
 LDIR = -L$(FFMPEG_LIB_DIR)/libswscale -L$(FFMPEG_LIB_DIR)/libavdevice -L$(FFMPEG_LIB_DIR)/libavutil -L$(FFMPEG_LIB_DIR)/libavformat -L$(FFMPEG_LIB_DIR)/libavcodec -L/usr/local/lib
 FFMPEG_LIBS = -lswscale -lavdevice -lavformat -lavcodec -lavutil
 LIBS = -lpthread  -lm -lz
 CFLAGS = -Wall -g $(IDIRS)
 LDFLAGS =  $(LDIR) $(FFMPEG_LIBS) $(LIBS)
+OS := $(shell uname)
 
-ifeq ($(OS),linux)
+ifeq ($(OS), Linux)
     LIBS += -lrt
 else
 	LIBS += -liconv
 endif
-
 
 $(ODIR)/%.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
@@ -27,8 +27,14 @@ $(ODIR)/%.o: %.c $(DEPS)
 $(EXE): $(OBJ)
 	$(CC) -o $@ $^ $(LDFLAGS)
 
+$(phony install): install
+
+install:
+	test -w $(../bin) || mkdir $(../bin)
+	install obj/$(EXE)  ../bin
+
+
 .PHONY: clean
 
 clean:
 	rm -rf $(ODIR)/*.o $(EXE)
-
