fixed some mistakes after testing latest changes

--- a/liveRecorder/ts_to_mp4_convertor/Makefile
+++ b/liveRecorder/ts_to_mp4_convertor/Makefile
@@ -29,9 +29,9 @@ $(EXE): $(OBJ)
 
 $(phony install): install
 
-install:
+install: $(EXE)
 	test -w $(../bin) || mkdir $(../bin)
-	install obj/$(EXE)  ../bin
+	install $(EXE)  ../bin
 
 
 .PHONY: clean
