--- a/liveRecorder/ts_to_mp4_convertor/Makefile
+++ b/liveRecorder/ts_to_mp4_convertor/Makefile
@@ -30,9 +30,8 @@ $(EXE): $(OBJ)
 $(phony install): install
 
 install: $(EXE)
-	test -w $(../bin) || mkdir $(../bin)
-	install $(EXE)  ../bin
-
+	mkdir -p ../bin
+	install $(EXE) ../bin/
 
 .PHONY: clean
 
